# vbaffi

./: Cargo.toml  LICENSE  README.md  example.bas  vbaffi.xlsm
src/: guard.rs  lib.rs  safeslice.rs  safevec.rs
